<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DecompressFragment">

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/not_available"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_image"
        app:layout_constraintStart_toEndOf="@+id/tv_title_name"
        app:layout_constraintTop_toTopOf="@+id/tv_title_name" />

    <TextView
        android:id="@+id/tv_title_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_name" />

    <TextView
        android:id="@+id/tv_file_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/not_available"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_image"
        app:layout_constraintStart_toEndOf="@+id/tv_title_size"
        app:layout_constraintTop_toTopOf="@+id/tv_title_size" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add_file"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_name" />

    <TextView
        android:id="@+id/tv_title_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/select_method"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_file_size" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/method_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_method"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/elias_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elias_omega_code"
            app:checkedIconTint="@color/colorPrimaryDark"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/levenstein_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levenstein_code"
            app:checkedIconTint="@color/colorPrimaryDark"
            app:checkedIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_decompress"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/decompress"
        android:textAlignment="center"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_unzip"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/method_chip_group" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_card"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_decompress"
        app:strokeColor="@color/colorTextPrimary"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/image" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_clear_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                app:backgroundTint="@color/colorTextSecondary"
                app:borderWidth="2dp"
                app:elevation="0dp"
                app:fabSize="mini"
                app:rippleColor="@color/colorPrimary"
                app:srcCompat="@drawable/ic_close" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_img_result_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_card"
        tools:text="1024kb" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_image"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_image"
        android:textAllCaps="false"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/img_card"
        app:layout_constraintTop_toBottomOf="@+id/img_card" />

</androidx.constraintlayout.widget.ConstraintLayout>